Fixed logo overflowing outside container

--- a/frontend/src/styles/layouts/_navigation.scss
+++ b/frontend/src/styles/layouts/_navigation.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	align-items: center;
 	height: 7rem;
+	overflow: hidden;
 
 	&__box {
 		display: flex;
